Renames sendAt column
